--- a/Indonesian/main/CloudService.apk/res/values-in/strings.xml
+++ b/Indonesian/main/CloudService.apk/res/values-in/strings.xml
@@ -47,8 +47,8 @@
     <string name="error_server">Server bermasalah</string>
     <string name="error_unknown">Tidak dapat masuk</string>
     <string name="sync_dspt">Sinkron</string>
-    <string name="sync_sub_dspt">An outgoing SMS message may be required to activate this service. Your carrier will charge you for this message.</string>
-    <string name="sync_sub_int_dspt">An outgoing international SMS message may be required to activate this service. Your carrier will charge you for this message.</string>
+    <string name="sync_sub_dspt">Pesan SMS keluar mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan ini.</string>
+    <string name="sync_sub_int_dspt">Pesan SMS keluar internasional mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan ini.</string>
     <string name="access_denied">Akses ditolak</string>
     <string name="internet_access_dspt">Apl ini perlu terhubung ke internet untuk bekerja dengan normal.</string>
     <string name="sync_on">Aktif</string>
@@ -61,7 +61,7 @@
     <string name="activate_number_change_dialog_message">Pilih nomor telepon yang perangkat lain dapat lihat saat Anda menggunakan panggilan internet (VoIP).</string>
     <string name="phone_number_may_required_dspt_provision">"Layanan ini mungkin membutuhkan no. telepon Anda. "</string>
     <string name="phone_number_required_dspt_provision">"Layanan ini membutuhkan no. telepon Anda. "</string>
-    <string name="sync_resend_sms_dspt_provision">" If you switch SIM cards, your carrier will charge you for an SMS message in case it's required to reactivate this service."</string>
+    <string name="sync_resend_sms_dspt_provision">" Jika Anda beralih kartu SIM, operator Anda akan mengenakan biaya untuk pesan SMS dalam kasus itu diperlukan untuk mengaktifkan kembali layanan ini."</string>
     <string name="sync_dspt_provision_title">Mi Cloud</string>
     <string name="sync_dspt_provision_header">Sinkron</string>
     <string name="sync_dspt_provision">"Sinkron foto, kontak, catatan Anda, dll. antar semua perangkat Anda atau akses mereka di "</string>
@@ -84,9 +84,9 @@
     <string name="mx_dspt_provision">"Mi Message memungkinkan Anda untuk kirim pesan ke perangkat MIUI lain tanpa dikenai biaya saat terhubung ke Wi-Fi.Anda dapat hidupkan atau matikan fitur ini kapan saja di Setelan."</string>
     <string name="mx_dspt_provision_with_voip">Gratis panggil perangkat MIUI lainnya menggunakan koneksi internet. Anda dapat hidupkan dan matikan fitur ini kapan saja di Setelan. VoIP didukung oleh Weihui. Lihat Kebijakan Privasi Weihui</string>
     <string name="mx_dspt_provision_with_voip2">Kebijakan Privasi</string>
-    <string name="mx_dspt_provision_privacy">"This feature may require your phone number. An outgoing SMS message may be required to activate this service. Your carrier will charge you for this message. This feature encrypts and sends your device's ID to Mi's servers."</string>
-    <string name="mx_dspt_provision_privacy_2_sim">"This feature may require your phone number. 2 outgoing SMS messages may be required to activate this service. Your carrier will charge you for these messages. This feature encrypts and sends your device's ID to Mi's servers."</string>
-    <string name="mx_dspt_provision_privacy_no_sim">"This feature may require your phone number. When SIM card is detected, an outgoing SMS message may be required to activate this service. Your carrier will charge you for this message. This feature encrypts and sends your device's ID to Mi's servers."</string>
+    <string name="mx_dspt_provision_privacy">"Fitur ini mungkin memerlukan nomor telepon Anda. Pesan SMS keluar mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan ini. Fitur ini mengenkripsi dan mengirimkan ID perangkat Anda ke server Mi."</string>
+    <string name="mx_dspt_provision_privacy_2_sim">"Fitur ini mungkin memerlukan nomor telepon Anda. 2 pesan SMS keluar mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan-pesan ini. Fitur ini mengenkripsi dan mengirimkan ID perangkat Anda ke server Mi."</string>
+    <string name="mx_dspt_provision_privacy_no_sim">"Fitur ini mungkin memerlukan nomor telepon Anda. Ketika kartu SIM terdeteksi, pesan SMS keluar mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan ini. Fitur ini mengenkripsi dan mengirimkan ID perangkat Anda ke server Mi."</string>
     <string name="user_agreement_p5">" "</string>
     <string name="user_agreement_p6">"Dengan menggunakan layanan ini, Anda menyetujui "</string>
     <string name="user_agreement_p7">Persyaratan Layanan Mi Cloud</string>
@@ -181,11 +181,11 @@
     <string name="micloud_user_space_title">Ruang Penyimpanan</string>
     <string name="sync_sub_dspt_provision">Sinkron foto, kontak, musik, apl, dll antar semua perangkat Anda</string>
     <string name="btn_return">Kembali</string>
-    <string name="sync_sub_1_sms">An outgoing SMS message may be required to activate this service. Your carrier will charge you for this message.</string>
-    <string name="sync_sub_1_intl_sms">An outgoing international SMS message may be required to activate this service. Your carrier will charge you for this message.</string>
-    <string name="sync_sub_2_sms">2 outgoing SMS messages may be required to activate this service. Your carrier will charge you for these messages.</string>
-    <string name="sync_sub_2_intl_sms">2 outgoing international SMS messages may be required to activate this service. Your carrier will charge you for these messages.</string>
-    <string name="sync_sub_1_sms_1_intl_sms">1 domestic and 1 international SMS message may be required to activate this service. Your carrier will charge you for these messages.</string>
+    <string name="sync_sub_1_sms">Pesan SMS keluar mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan ini.</string>
+    <string name="sync_sub_1_intl_sms">Pesan SMS keluar internasional mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan ini.</string>
+    <string name="sync_sub_2_sms">2 pesan SMS keluar mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan-pesan ini.</string>
+    <string name="sync_sub_2_intl_sms">2 pesan SMS keluar internasional mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan-pesan ini.</string>
+    <string name="sync_sub_1_sms_1_intl_sms">1 domestik dan 1 pesan SMS internasional mungkin diperlukan untuk mengaktifkan layanan ini. operator Anda akan mengenakan biaya untuk pesan-pesan ini.</string>
     <string name="micloud_all_sub_1_sms">SMS reguler akan dikirim untuk aktivasi kartu SIM. Anda akan dikenakan biaya oleh operator.</string>
     <string name="micloud_all_sub_1_intl_sms">SMS internasional akan dikirim untuk aktivasi kartu SIM. Anda akan dikenakan biaya oleh operator.</string>
     <string name="micloud_all_sub_2_sms">2 SMS reguler akan dikirim untuk aktivasi kartu SIM. Anda akan dikenakan biaya oleh operator.</string>
